java/helidon-server/src/main/k8s/ingress-nginx.yaml
#
# Copyright (c) 2020, 2021, Oracle and/or its affiliates.
#
# Licensed under the Universal Permissive License v 1.0 as shown at
# http://oss.oracle.com/licenses/upl.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: todo.demo.coherence.community
    http:
      paths:
      - path: /jaeger
        pathType: Prefix
        backend:
          serviceName: jaeger-query
          servicePort: 16686
      - path: /
        pathType: Prefix
        backend:
          serviceName: todo-list-http
          servicePort: 7001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: todo-grpc.demo.coherence.community
    http:
      paths:
      - backend:
          serviceName: todo-list-grpc
          servicePort: 1408
